Build: Ajustes no pom.xml e na pipeline.